feat(auth): add JWT resource-server security with migration header fallback

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -27,3 +27,9 @@ server:
 logging:
   level:
     org.springframework: INFO
+
+app:
+  security:
+    allow-header-auth: true
+    jwt:
+      secret: "progresspal-progresspal-progresspal-2026-key"
