chore(security): remove hardcoded JWT secret, use env var

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -32,4 +32,4 @@ app:
   security:
     allow-header-auth: true
     jwt:
-      secret: "progresspal-progresspal-progresspal-2026-key"
+      secret: ${APP_SECURITY_JWT_SECRET}
